/*
 * Copyright and related rights waived via CC0
 *
 * You should have received a copy of the CC0 legalcode along with this
 * work. If not, see <http://creativecommons.org/publicdomain/zero/1.0/>.
 */
plugins {
    id "org.graalvm.internal.tck"
    id "scala"
}

String libraryVersion = tck.testedLibraryVersion.get()

dependencies {
    testImplementation "org.apache.pekko:pekko-actor_3:$libraryVersion"
    testImplementation 'org.assertj:assertj-core:3.22.0'
    testImplementation 'org.scala-lang:scala3-library_3:3.3.6'
    testImplementation 'org.scala-lang:scala3-compiler_3:3.3.6'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

def cleanerPatchClasses = layout.buildDirectory.dir("classes/java/cleanerPatch")

tasks.register("compileCleanerPatch", JavaCompile) {
    source = fileTree("src/test/java8patch")
    destinationDirectory = cleanerPatchClasses
    classpath = files()
    javaCompiler = javaToolchains.compilerFor {
        languageVersion = JavaLanguageVersion.of(21)
    }
    options.release = 8
}

tasks.withType(Test).configureEach {
    dependsOn tasks.named("compileCleanerPatch")
    jvmArgs "--add-modules=jdk.unsupported"
    jvmArgs "--add-opens=java.base/sun.net.dns=ALL-UNNAMED"
    jvmArgs "--add-opens=java.base/java.nio=ALL-UNNAMED"
    jvmArgs "--patch-module=jdk.unsupported=${cleanerPatchClasses.get().asFile.absolutePath}"
}

graalvmNative {
    agent {
        defaultMode = "conditional"
        modes {
            conditional {
                userCodeFilterPath = "user-code-filter.json"
            }
        }
    }
    binaries {
        all {
            buildArgs.add("--add-opens=java.base/sun.net.dns=ALL-UNNAMED")
            buildArgs.add("--add-opens=java.base/java.nio=ALL-UNNAMED")
            buildArgs.add('--initialize-at-build-time=org.apache.pekko.io.DirectByteBufferPool$')
            buildArgs.add("--initialize-at-build-time=scala.runtime.function.JProcedure1,scala.Function1,java.io.Serializable")
            buildArgs.add("-J--add-modules=jdk.unsupported")
            buildArgs.add("-J--add-opens=java.base/java.nio=ALL-UNNAMED")
            buildArgs.add("-J--patch-module=jdk.unsupported=${cleanerPatchClasses.get().asFile.absolutePath}")
        }
    }
}

tasks.matching { it.name.startsWith("native") }.configureEach {
    dependsOn tasks.named("compileCleanerPatch")
}
